<resources>
    <string name="app_name">Sofra</string>
    <string name="title">التطبيق الاول لطلب وبيع الطعام المنزلى</string>
    <string name="orderfood">طلب طعام</string>
    <string name="sellfood">بيع طعام</string>
    <string name="title_activity_home">طلب طعام</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="welcom">مرحبا بك ..</string>
    <string name="home">الصفحه الرئيسيه</string>
    <string name="orders">طلباتى</string>
    <string name="notification">التنبيهات</string>
    <string name="offers">جديد العروض</string>
    <string name="aboutapp">عن التطبيق</string>
    <string name="condithions">الشروط والاحكام</string>
    <string name="shareapp">شارك التطبيق </string>
    <string name="menu">قائمة الطعام</string>
    <string name="comments">التعليقات والتقييم</string>
    <string name="playstoreinf">معلومات المتجر</string>
    <string name="orderbasker">سلة الطلبات</string>
    <string name="excuteorder">تنفيذ الطلب</string>
    <string name="signinplease">تفضل بتسجيل الدخول </string>
    <string name="email">البريد الالكترونى</string>
    <string name="password">كلمة المرور</string>
    <string name="my_text">نسيت كلمة المرور؟ <u>underline</u>.</string>
    <string name="excuteordersuccesfully">استلام</string>

    <string name="signin">تسجيل الدخول</string>
    <string name="forgetpassword">نسيت كلمة المرور؟</string>
    <string name="register">انشاء حساب جديد</string>
    <string name="addmore">اضافة المزيد</string>
    <string name="callus">تواصل معنا</string>
    <string name="name">الاسم</string>
    <string name="phone">الجوال</string>
    <string name="city">المدينه</string>
    <string name="street">الحى</string>
    <string name="homedetails">وصف السكن</string>
    <string name="confirmpassword">تاكيد كلمة المرور</string>
    <string name="next">التالى</string>
    <string name="currentorders">طلبات حاليه</string>
    <string name="previousorders">طلبات سابقه</string>
    <string name="notificationtitle">عنوان التطبيق هنا </string>
    <string name="notificationdate">19 نوفمبر </string>
    <string name="notificationtime">6:30 مساءا</string>
    <string name="offertitle">احصل على خصم50% لكل طلب</string>
    <string name="restaurantoffer">محلات الفطير الدمشقيه</string>
    <string name="offertime">سارى لفتره محدوده</string>
    <string name="offerprice">السعر  </string>
    <string name="about">هناك حقيقه مثبته من زمن طويل وهو ان المحتوى المقروء لصفحه ما سيلهى القارىء عن التركيز على الشكل الخارجى للنص او شكل توضيح للفقرات فى الصفحه التى يقراها</string>
    <string name="addnotes">اضافة ملاحظات </string>
    <string name="orderaddress">عنوان التوصيل </string>
    <string name="address">المنصوره شارع جيهان </string>
    <string name="payment">الدفع </string>
    <string name="complainment">شكوى </string>
    <string name="suggest">اقتراح </string>
    <string name="enquiry">استعلام </string>
    <string name="send">ارسال </string>
    <string name="fullname">الاسم كاملا ... </string>
    <string name="mail">البريد الالكترونى.. </string>
    <string name="phonenumber">الجوال </string>
    <string name="followus">تابعنا على:  </string>
    <string name="ourorders">منتجاتى </string>
    <string name="orderpresented">الطلبات المقدمه </string>
    <string name="money">العموله </string>
    <string name="ouroffers">عروضى </string>
    <string name="addnewproduct">اضف منتج جديد </string>
    <string name="productname">اسم المنتج </string>
    <string name="productdescribe">وصف مختصر </string>
    <string name="productprice">السعر </string>
    <string name="producttime">مدة تجهيز الطلب </string>
    <string name="addproductphoto">اضف صوره للمنتج </string>
    <string name="add">اضف </string>
    <string name="addnewoffer">اضف عرض جديد</string>
    <string name="offername">اسم العرض </string>
    <string name="addofferphoto">اضف صوره للعرض </string>
    <string name="timefrom">المده من ...</string>
    <string name="timeto">المده الى ...</string>
    <string name="commisiontitile">يرجى تحويل 10% من الربح المباع فىمده اقصاها شهر علما بان جميعالطلبات ستكون مسجله على حسابك الشخصى </string>
    <string name="thecheifcommison">مبيعات المطعم </string>
    <string name="appcommision">عمولة التطبيق </string>

    <string name="bank1">الراجحى : 53211567987 </string>
    <string name="bank2">الاهلى :86323456789 </string>
    <string name="mo2ssatsofra">باسم مؤسسة سفره </string>
    <string name="neworders">طلبات جديده </string>
    <string name="ourcurrentorders">طلبات حاليه </string>
    <string name="ourpreviousorders">طلبات سابقه </string>
    <string name="clientname">العميل : محمد المحمودى </string>
    <string name="theorderis">الطلب : شاندوتش برجر تركى  </string>
    <string name="recieveordertime">تاريخ/وقت التسليم : السبت 1 يناير 2007 الساعه 6 مساءا </string>
    <string name="receiveorderaddress">العنوان : شراع جيهان حى الجامعه ... </string>
    <string name="accept">قبول </string>
    <string name="refuse">رفض </string>
    <string name="ordernumber">رقم الطلب : 7545 </string>
    <string name="quentity">الكميه :2 </string>
    <string name="price">20 ريال </string>
    <string name="arrivalmony">10 ريال  </string>
    <string name="ordertimetoready">مدة تجهيز الطلب 18 دقيقه </string>
    <string name="accepted">تم التسليم </string>
    <string name="excutetheorder">تم تنفيذ الطلب فى </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_the_main">TheMainActivity</string>
    <string name="follow">متابعه</string>
    <string name="ordersandarrival">الطلبات والتوصيل</string>
    <string name="minimumorder">الحد الادنى للطلب</string>
    <string name="arrivalmonyis">رسوم التوصيل</string>
    <string name="arrivaldata">بيانات التوصيل</string>
    <string name="watsappp">الواتس اب</string>
    <string name="login">تعديل البيانات</string>
    <string name="restaurantphoto">صوره المتجر</string>
    <string name="search">البحث...</string>
    <string name="addtobasket">اضف الى السله</string>
    <string name="quientity">الكميه</string>
    <string name="specialorder">طلب خاص</string>
    <string name="minimumchargetext">الحد الادنى للطلب : </string>
    <string name="deliverycosttext">رسوم التوصيل :</string>
    <string name="from">من :</string>
    <string name="to">الى :</string>
    <string name="pricetext">السعر:</string>
    <string name="deliverycost">التوصيل :</string>
    <string name="total"> الاجمالى:</string>
    <string name="ordernumbertrxt">رقم الطلب :</string>
    <string name="payed">ما تم سداده</string>
    <string name="appcomissions">عمولات التطبيق</string>
    <string name="netcomission">المتبقى</string>
    <string name="addresstext">العنوان :</string>
    <string name="clientnametext">العميل :</string>
    <string name="completeorder">الطلب مكتمل</string>
    <string name="thesum">المجموع الكلى  :</string>
    <string name="cashorder">نقدا عند الاستلام</string>
    <string name="networkorder">شبكة عن الاستلام</string>
    <string name="add_comment_here">add comment here.....</string>
    <string name="cancel">cancel</string>
    <string name="add_review">add review</string>
    <string name="deliveryperiod">مدة تجهيز الطلب</string>
    <string name="availability">الحاله</string>
    <string name="signinbtn">تسجيل</string>

</resources>
