<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    tools:context=".Restaurants_Fragments.Commission_Fragment">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="30dp"
        android:layout_marginRight="8dp"
        android:layout_marginLeft="8dp"
        android:gravity="center"
        android:text="@string/commisiontitile"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TableLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/tablayout_drawable"
        android:padding="5dp">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@drawable/tablayout_drawable"
                android:padding="15dip"
                android:text="@string/thecheifcommison"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/restaurantsells"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:background="@drawable/tablayout_drawable"
                android:gravity="right"
                android:padding="15dip"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@drawable/background_gray"
                android:padding="15dip"
                android:text="@string/appcomissions"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/app_comissions"
                android:layout_width="0dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@drawable/background_gray"
                android:padding="15dip"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@drawable/tablayout_drawable"
                android:padding="15dip"
                android:text="@string/payed"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/payments"
                android:layout_width="0dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@drawable/tablayout_drawable"
                android:padding="15dip"
                android:text="" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="0dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@drawable/background_gray"
                android:padding="15dip"
                android:text="@string/netcomission"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/net_comissions"
                android:layout_width="0dp"
                android:layout_gravity="right"
                android:layout_weight="1"
                android:background="@drawable/background_gray"
                android:padding="15dip"
                android:text="" />
        </TableRow>
    </TableLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="100dp"
        android:text="@string/bank1"
        android:textStyle="bold"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/bank2"
        android:textStyle="bold"
        android:textSize="15sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/mo2ssatsofra"
        android:textStyle="bold"
        android:textSize="15sp" />

</LinearLayout>