<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="4dp"
    android:background="@drawable/gridview_drawable"
    android:layoutDirection="rtl"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/imageeat"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_margin="4dp"
        android:src="@drawable/eat" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:layout_marginBottom="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".1"
                android:text="@string/clientnametext"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/clientname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight=".9"
                android:text=""
                android:textDirection="rtl"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/ordernumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:text="@string/ordernumber"
                android:textColor="#f2c15e"
                android:textSize="15sp" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="#e7e6e6"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#e7e6e6"
                android:text="@string/pricetext"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:text="@string/price"
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="#e7e6e6"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="#e7e6e6"
                android:text="@string/arrivalmonyis"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/arrivalmony"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginRight="6dp"
                android:layout_weight="1"
                android:background="#e7e6e6"
                android:text="@string/arrivalmony"
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="#e7e6e6"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:background="#e7e6e6"
                android:text="@string/total"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/gettotal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginRight="4dp"
                android:layout_weight="1"
                android:background="#e7e6e6"
                android:text=""
                android:textSize="12sp" />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:background="#666363"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/addresstext"
                android:textColor="#fff"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/receiveorderaddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:gravity="right"
                android:text=""
                android:textColor="#fff" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/clientphone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:background="#f24c4c"
                android:drawableRight="@mipmap/hotnumber"
                android:drawablePadding="8dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="011347890"
                android:textColor="#fff"
                android:textSize="15sp" />

            <Button
                android:id="@+id/accept"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="4dp"
                android:background="#44ae39"
                android:drawableRight="@mipmap/excute_icon"
                android:padding="4dp"
                android:text="@string/accept"
                android:textColor="#fff"
                android:textSize="15sp" />

            <Button
                android:id="@+id/refuse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="#605959"
                android:drawableRight="@mipmap/refuseicon"
                android:padding="4dp"
                android:text="@string/refuse"
                android:textColor="#fff"
                android:textSize="15sp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>