<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4e8ce"
    android:orientation="vertical"
    android:padding="40dp">

    <EditText
        android:id="@+id/writecomment"
        android:layout_width="240dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/white_edittext"
        android:hint="@string/add_comment_here"
        android:paddingLeft="15dp"
        android:textSize="14sp" />

    <RatingBar
        android:id="@+id/C_conmmentrating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="horizontal"
        android:paddingTop="20dp">

        <Button
            android:id="@+id/addreview_btn"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginRight="20dp"
            android:background="#fddd8b"
            android:text="@string/add_review"
            android:textColor="#504d4d"
            android:textSize="15sp" />

        <Button
            android:id="@+id/cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:background="#fddd8b"
            android:text="@string/cancel"
            android:textColor="#504d4d"
            android:textSize="15sp" />
    </LinearLayout>
</LinearLayout>